# unitas-oracle

./: .gitignore  Anchor.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
client/: Cargo.toml
client/src/: constants.rs  main.rs
programs/unitas-oracle/: Cargo.toml
programs/unitas-oracle/src/: constants.rs  error.rs  event.rs  lib.rs
programs/unitas-oracle/src/instructions/: add_account.rs  mod.rs  remove_account.rs  update_aum_usd.rs
programs/unitas-oracle/src/instructions/admin/: add_operator.rs  create_asset_lookup_table.rs  create_lookup_table.rs  init_config.rs  mod.rs  remove_operator.rs  transfer_admin.rs
programs/unitas-oracle/src/state/: asset.rs  config.rs  mod.rs
tests/: unitas-oracle.js  unitas-oracle.ts
