[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = { version = "0.31.0" }
anchor-lang = { version = "0.31.0" }
anchor-spl = { version = "0.31.0" }
pyth-sdk-solana = "0.10.0"
solana-sdk = "=2.2.1"
solana-client = "=2.2.1"
solana-account-decoder = "=2.2.1"
solana-transaction-status = "=2.2.1"
clap = { version = "4.1.8", features = ["derive"] }
anyhow = "1.0.32"
rand = "0.9.0"
hex = "0.4.3"
configparser = "3.0.0"
serde_json = { version = "1.0.78" }
serde = { version = "1.0", features = ["derive"] }
arrayref = "0.3.7"
bs58 = { version = "0.5.0" }
bincode = { version = "1.3.3" }
regex = "1"
colorful = "0.3.2"
base64 = "0.21.0"
bytemuck = { version = "1.23.0", features = ["derive"] }
borsh = "1.5.7"
spl-token = "8.0.0"
